src/parse/lisp/lispParser.py
# Generated from gramm/lisp/lispParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lispParser ( Parser ):

    grammarFileName = "lispParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'''", "'`'", "',@'", "','", 
                     "'.'", "'#('", "'&optional'", "'&rest'", "'&key'", 
                     "'&aux'" ]

    symbolicNames = [ "<INVALID>", "LPAREN", "RPAREN", "QUOTE", "BACKQUOTE", 
                      "COMMA_AT", "COMMA", "DOT", "VECTOR_START", "AMP_OPTIONAL", 
                      "AMP_REST", "AMP_KEY", "AMP_AUX", "DEFUN", "LAMBDA", 
                      "LETSTAR", "LET", "IF", "COND", "PROGN", "SETQ", "DEFVAR", 
                      "DEFPARAMETER", "DEFCONSTANT", "QUOTE_KW", "FUNCTION_KW", 
                      "NIL", "TRUE", "BOOLEAN", "CharacterLiteral", "Number", 
                      "StringLiteral", "SYMBOL", "LineComment", "BlockComment", 
                      "WS" ]

    RULE_program = 0
    RULE_form = 1
    RULE_quotedForm = 2
    RULE_vector = 3
    RULE_list = 4
    RULE_listContent = 5
    RULE_defunForm = 6
    RULE_lambdaForm = 7
    RULE_letForm = 8
    RULE_bindingSpec = 9
    RULE_ifForm = 10
    RULE_condForm = 11
    RULE_condClause = 12
    RULE_prognForm = 13
    RULE_setqForm = 14
    RULE_definitionForm = 15
    RULE_quoteSpecialForm = 16
    RULE_functionSpecialForm = 17
    RULE_applicationForm = 18
    RULE_dottedList = 19
    RULE_lambdaList = 20
    RULE_lambdaListElement = 21
    RULE_declaration = 22
    RULE_body = 23
    RULE_atom = 24

    ruleNames =  [ "program", "form", "quotedForm", "vector", "list", "listContent", 
                   "defunForm", "lambdaForm", "letForm", "bindingSpec", 
                   "ifForm", "condForm", "condClause", "prognForm", "setqForm", 
                   "definitionForm", "quoteSpecialForm", "functionSpecialForm", 
                   "applicationForm", "dottedList", "lambdaList", "lambdaListElement", 
                   "declaration", "body", "atom" ]

    EOF = Token.EOF
    LPAREN=1
    RPAREN=2
    QUOTE=3
    BACKQUOTE=4
    COMMA_AT=5
    COMMA=6
    DOT=7
    VECTOR_START=8
    AMP_OPTIONAL=9
    AMP_REST=10
    AMP_KEY=11
    AMP_AUX=12
    DEFUN=13
    LAMBDA=14
    LETSTAR=15
    LET=16
    IF=17
    COND=18
    PROGN=19
    SETQ=20
    DEFVAR=21
    DEFPARAMETER=22
    DEFCONSTANT=23
    QUOTE_KW=24
    FUNCTION_KW=25
    NIL=26
    TRUE=27
    BOOLEAN=28
    CharacterLiteral=29
    Number=30
    StringLiteral=31
    SYMBOL=32
    LineComment=33
    BlockComment=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(lispParser.EOF, 0)

        def form(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lispParser.FormContext)
            else:
                return self.getTypedRuleContext(lispParser.FormContext,i)


        def getRuleIndex(self):
            return lispParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = lispParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8522826106) != 0):
                self.state = 50
                self.form()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(lispParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(lispParser.AtomContext,0)


        def list_(self):
            return self.getTypedRuleContext(lispParser.ListContext,0)


        def vector(self):
            return self.getTypedRuleContext(lispParser.VectorContext,0)


        def quotedForm(self):
            return self.getTypedRuleContext(lispParser.QuotedFormContext,0)


        def getRuleIndex(self):
            return lispParser.RULE_form

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForm" ):
                listener.enterForm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForm" ):
                listener.exitForm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForm" ):
                return visitor.visitForm(self)
            else:
                return visitor.visitChildren(self)




    def form(self):

        localctx = lispParser.FormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_form)
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26, 27, 28, 29, 30, 31, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.atom()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.list_()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.vector()
                pass
            elif token in [3, 4, 5, 6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 61
                self.quotedForm()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuotedFormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self):
            return self.getToken(lispParser.QUOTE, 0)

        def form(self):
            return self.getTypedRuleContext(lispParser.FormContext,0)


        def BACKQUOTE(self):
            return self.getToken(lispParser.BACKQUOTE, 0)

        def COMMA(self):
            return self.getToken(lispParser.COMMA, 0)

        def COMMA_AT(self):
            return self.getToken(lispParser.COMMA_AT, 0)

        def getRuleIndex(self):
            return lispParser.RULE_quotedForm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuotedForm" ):
                listener.enterQuotedForm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuotedForm" ):
                listener.exitQuotedForm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuotedForm" ):
                return visitor.visitQuotedForm(self)
            else:
                return visitor.visitChildren(self)




    def quotedForm(self):

        localctx = lispParser.QuotedFormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_quotedForm)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(lispParser.QUOTE)
                self.state = 65
                self.form()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(lispParser.BACKQUOTE)
                self.state = 67
                self.form()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.match(lispParser.COMMA)
                self.state = 69
                self.form()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.match(lispParser.COMMA_AT)
                self.state = 71
                self.form()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VECTOR_START(self):
            return self.getToken(lispParser.VECTOR_START, 0)

        def RPAREN(self):
            return self.getToken(lispParser.RPAREN, 0)

        def form(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lispParser.FormContext)
            else:
                return self.getTypedRuleContext(lispParser.FormContext,i)


        def getRuleIndex(self):
            return lispParser.RULE_vector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVector" ):
                listener.enterVector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVector" ):
                listener.exitVector(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVector" ):
                return visitor.visitVector(self)
            else:
                return visitor.visitChildren(self)




    def vector(self):

        localctx = lispParser.VectorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vector)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(lispParser.VECTOR_START)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8522826106) != 0):
                self.state = 75
                self.form()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(lispParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(lispParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(lispParser.RPAREN, 0)

        def listContent(self):
            return self.getTypedRuleContext(lispParser.ListContentContext,0)


        def getRuleIndex(self):
            return lispParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = lispParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(lispParser.LPAREN)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589926778) != 0):
                self.state = 84
                self.listContent()


            self.state = 87
            self.match(lispParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defunForm(self):
            return self.getTypedRuleContext(lispParser.DefunFormContext,0)


        def lambdaForm(self):
            return self.getTypedRuleContext(lispParser.LambdaFormContext,0)


        def letForm(self):
            return self.getTypedRuleContext(lispParser.LetFormContext,0)


        def ifForm(self):
            return self.getTypedRuleContext(lispParser.IfFormContext,0)


        def condForm(self):
            return self.getTypedRuleContext(lispParser.CondFormContext,0)


        def prognForm(self):
            return self.getTypedRuleContext(lispParser.PrognFormContext,0)


        def setqForm(self):
            return self.getTypedRuleContext(lispParser.SetqFormContext,0)


        def definitionForm(self):
            return self.getTypedRuleContext(lispParser.DefinitionFormContext,0)


        def quoteSpecialForm(self):
            return self.getTypedRuleContext(lispParser.QuoteSpecialFormContext,0)


        def functionSpecialForm(self):
            return self.getTypedRuleContext(lispParser.FunctionSpecialFormContext,0)


        def dottedList(self):
            return self.getTypedRuleContext(lispParser.DottedListContext,0)


        def applicationForm(self):
            return self.getTypedRuleContext(lispParser.ApplicationFormContext,0)


        def getRuleIndex(self):
            return lispParser.RULE_listContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListContent" ):
                listener.enterListContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListContent" ):
                listener.exitListContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListContent" ):
                return visitor.visitListContent(self)
            else:
                return visitor.visitChildren(self)




    def listContent(self):

        localctx = lispParser.ListContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listContent)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.defunForm()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.lambdaForm()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.letForm()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.ifForm()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.condForm()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                self.prognForm()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 95
                self.setqForm()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 96
                self.definitionForm()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 97
                self.quoteSpecialForm()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 98
                self.functionSpecialForm()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 99
                self.dottedList()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 100
                self.applicationForm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefunFormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFUN(self):
            return self.getToken(lispParser.DEFUN, 0)

        def SYMBOL(self):
            return self.getToken(lispParser.SYMBOL, 0)

        def lambdaList(self):
            return self.getTypedRuleContext(lispParser.LambdaListContext,0)


        def body(self):
            return self.getTypedRuleContext(lispParser.BodyContext,0)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lispParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(lispParser.DeclarationContext,i)


        def getRuleIndex(self):
            return lispParser.RULE_defunForm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefunForm" ):
                listener.enterDefunForm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefunForm" ):
                listener.exitDefunForm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefunForm" ):
                return visitor.visitDefunForm(self)
            else:
                return visitor.visitChildren(self)




    def defunForm(self):

        localctx = lispParser.DefunFormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_defunForm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(lispParser.DEFUN)
            self.state = 104
            self.match(lispParser.SYMBOL)
            self.state = 105
            self.lambdaList()
            self.state = 109
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 106
                    self.declaration() 
                self.state = 111
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 112
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaFormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LAMBDA(self):
            return self.getToken(lispParser.LAMBDA, 0)

        def lambdaList(self):
            return self.getTypedRuleContext(lispParser.LambdaListContext,0)


        def body(self):
            return self.getTypedRuleContext(lispParser.BodyContext,0)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lispParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(lispParser.DeclarationContext,i)


        def getRuleIndex(self):
            return lispParser.RULE_lambdaForm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLambdaForm" ):
                listener.enterLambdaForm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLambdaForm" ):
                listener.exitLambdaForm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaForm" ):
                return visitor.visitLambdaForm(self)
            else:
                return visitor.visitChildren(self)




    def lambdaForm(self):

        localctx = lispParser.LambdaFormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lambdaForm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(lispParser.LAMBDA)
            self.state = 115
            self.lambdaList()
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 116
                    self.declaration() 
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 122
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetFormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(lispParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(lispParser.RPAREN, 0)

        def body(self):
            return self.getTypedRuleContext(lispParser.BodyContext,0)


        def LET(self):
            return self.getToken(lispParser.LET, 0)

        def LETSTAR(self):
            return self.getToken(lispParser.LETSTAR, 0)

        def bindingSpec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lispParser.BindingSpecContext)
            else:
                return self.getTypedRuleContext(lispParser.BindingSpecContext,i)


        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lispParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(lispParser.DeclarationContext,i)


        def getRuleIndex(self):
            return lispParser.RULE_letForm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetForm" ):
                listener.enterLetForm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetForm" ):
                listener.exitLetForm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetForm" ):
                return visitor.visitLetForm(self)
            else:
                return visitor.visitChildren(self)




    def letForm(self):

        localctx = lispParser.LetFormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_letForm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(_la==15 or _la==16):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 125
            self.match(lispParser.LPAREN)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1 or _la==32:
                self.state = 126
                self.bindingSpec()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(lispParser.RPAREN)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 133
                    self.declaration() 
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 139
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BindingSpecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(lispParser.SYMBOL, 0)

        def LPAREN(self):
            return self.getToken(lispParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(lispParser.RPAREN, 0)

        def form(self):
            return self.getTypedRuleContext(lispParser.FormContext,0)


        def getRuleIndex(self):
            return lispParser.RULE_bindingSpec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBindingSpec" ):
                listener.enterBindingSpec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBindingSpec" ):
                listener.exitBindingSpec(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBindingSpec" ):
                return visitor.visitBindingSpec(self)
            else:
                return visitor.visitChildren(self)




    def bindingSpec(self):

        localctx = lispParser.BindingSpecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_bindingSpec)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.match(lispParser.SYMBOL)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(lispParser.LPAREN)
                self.state = 143
                self.match(lispParser.SYMBOL)
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8522826106) != 0):
                    self.state = 144
                    self.form()


                self.state = 147
                self.match(lispParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfFormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(lispParser.IF, 0)

        def form(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lispParser.FormContext)
            else:
                return self.getTypedRuleContext(lispParser.FormContext,i)


        def getRuleIndex(self):
            return lispParser.RULE_ifForm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfForm" ):
                listener.enterIfForm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfForm" ):
                listener.exitIfForm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfForm" ):
                return visitor.visitIfForm(self)
            else:
                return visitor.visitChildren(self)




    def ifForm(self):

        localctx = lispParser.IfFormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifForm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(lispParser.IF)
            self.state = 151
            self.form()
            self.state = 152
            self.form()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8522826106) != 0):
                self.state = 153
                self.form()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondFormContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COND(self):
            return self.getToken(lispParser.COND, 0)

        def condClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lispParser.CondClauseContext)
            else:
                return self.getTypedRuleContext(lispParser.CondClauseContext,i)


        def getRuleIndex(self):
            return lispParser.RULE_condForm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondForm" ):
                listener.enterCondForm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondForm" ):
                listener.exitCondForm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondForm" ):
                return visitor.visitCondForm(self)
            else:
                return visitor.visitChildren(self)




    def condForm(self):

        localctx = lispParser.CondFormContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_condForm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(lispParser.COND)
            self.state = 158 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 157
                self.condClause()
                self.state = 160 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(lispParser.LPAREN, 0)

        def form(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lispParser.FormContext)
            else:
                return self.getTypedRuleContext(lispParser.FormContext,i)


        def RPAREN(self):
            return self.getToken(lispParser.RPAREN, 0)

        def getRuleIndex(self):
            return lispParser.RULE_condClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondClause" ):
                listener.enterCondClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondClause" ):
                listener.exitCondClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondClause" ):
                return visitor.visitCondClause(self)
            else:
                return visitor.visitChildren(self)




    def condClause(self):

        localctx = lispParser.CondClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(lispParser.LPAREN)
            self.state = 163
            self.form()
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8522826106) != 0):
                self.state = 164
                self.form()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 170
            self.match(lispParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrognFormContext(ParserRuleContext):
        __slots__ = 'parser'
